2004-11-04  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/messagedialog.hg: Reverted set_message() implementation 
	change and added set_secondary_text().
	* gtk/src/dialog.hg: Added alternative_button_order().
	* gtk/src/: Added comboboxcombo.[hg|ccg] and comboboxprogress.[hg|ccg].
	* gtk/gtkmm/cellrenderer_generation.[h|cc]: Add template 
	specializations to create a CellRendererCombo when the model is of 
	type TreeModel.
	* pango/src/context.hg: Added get_font_map().
	* examples/book/treeview/: Added combo_renderer example - does not 
	actually work yet.

2004-11-03  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/menus/popup/examplewindow.[h|cc]: Use the popup 
	UIManager node type, so that this example works.
	* docs/tutorial/gtkmm-tut.xml: Update the popup menu section.

2004-11-03  Murray Cumming  <murrayc@murrayc.com>

	* Removed gtkmm.spec.in and mention of it in configure.in and 
	Makefile.am, yet again. There is no point in having a broken spec 
	file that nobody is maintaining. spec files are distro-specific and 
	belong with distros.

2004-10-31  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/treemodelfilter.ccg: SignalProxy_Modify::gtk_callback():
	Do not return before actually copying the value.
	* examples/book/treeview/: Added filter_modify example, to show the 
	use of set_modify_func().

2004-10-30  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_methods.hg: Regenerated with h2defs.py.
	* gtk/src/window.hg: Added drag_dest_add_text_targets(), 
	drag_dest_add_uri_targets(), drag_dest_add_image_targets(), 
	drag_source_add_text_targets(), drag_source_add_uri_targets(),
	drag_source_add_image_targets().
	* gtk/src/aboutdialog: Added get_logo_icon_name(), and 
	set_logo_icon_name().
	* gtk/src/clipboard.hg: Added wait_is_target_available(), 
	set_can_store(), store()
	* gtk/src/filechooserbutton: Added get/set_width_chars()
	* gtk/src/image.hg: Added set_from_icon_name(), get/set_pixel_size(), 
	get_icon_name()