@@ -24,7 +24,6 @@
 #include <gtkmm/cellrenderertext.h>
 #include <gtkmm/cellrendererpixbuf.h>
 #include <gtkmm/cellrenderertoggle.h>
-#include <gtkmm/cellrenderercombo.h>
 
 namespace Gtk
 {
@@ -52,8 +51,6 @@ CellRenderer* generate_cellrenderer<bool>(bool editable);
 template<>
 CellRenderer* generate_cellrenderer< Glib::RefPtr<Gdk::Pixbuf> >(bool editable);
 
-template<>
-CellRenderer* generate_cellrenderer< Glib::RefPtr<Gtk::TreeModel> >(bool editable);
 #endif
 
 } //CellRenderer_Generation
