@@ -33,12 +33,12 @@ namespace Gtk
  */
 class CellRendererCombo : public CellRendererText
 {
-  _CLASS_GTKOBJECT(CellRendererCombo,GtkCellRendererCombo,GTK_CELL_RENDERER_COMBO,Gtk::CellRendererText,GtkCellRendererText)
+  _CLASS_GTKOBJECT(CellRendererCombo, GtkCellRendererCombo, GTK_CELL_RENDERER_COMBO, Gtk::CellRendererText, GtkCellRendererText)
 public:
 
   _CTOR_DEFAULT
   
-  _WRAP_PROPERTY("model", Glib::RefPtr<Gdk::Pixbuf>)
+  _WRAP_PROPERTY("model", Glib::RefPtr<Gtk::TreeModel>)
   _WRAP_PROPERTY("text_column", int)
   _WRAP_PROPERTY("has_entry", bool)
 
