@@ -222,16 +222,17 @@ public:
   int insert_column_editable(const Glib::ustring& title, const TreeModelColumn<ColumnType>& model_column, int position);
 
   typedef TreeViewColumn::SlotCellData SlotCellData;
+  
   /**
-     Inserts a new column into the TreeView with the given cell
-     renderer and a SlotCellData to set cell renderer attributes
-     (normally using data from the model). 
-
-     @param position Position to insert, -1 for append
-     @param title column title
-     @param cell cell renderer for column
-     @param slot function to set attributes of cell renderer
-     @return number of columns in the TreeView after the insert
+   * Inserts a new column into the TreeView with the given cell
+   * renderer and a SlotCellData to set cell renderer attributes
+   * (normally using data from the model). 
+   *
+   * @param position Position to insert, -1 for append
+   * @param title column title
+   * @param cell cell renderer for column
+   * @param slot function to set attributes of cell renderer
+   * @return number of columns in the TreeView after the insert
    */
   int insert_column_with_data_func(int position, const Glib::ustring& title, CellRenderer& cell, const SlotCellData& slot);
 
