@@ -1,3 +1,14 @@
+2004-11-07  Murray Cumming  <murrayc@murrayc.com>
+
+	* gtk/src/combocellrenderer.hg: The model is a TreeModel, not a 
+	Pixbuf.
+	* gtk/gtkmm/cellrenderer_generation.[h|cc]: Remove the TreeModel/Combo 
+	specialization, because the Combo is not for representing or editing 
+	a TreeModel - it's just to use a TreeModel to present choices for 
+	a text column.
+	* examples/book/treeview/combo_renderer/examplewindow.[h|cc]: This 
+	now works.
+
 2004-11-04  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/messagedialog.hg: Reverted set_message() implementation 
